added new arrays and objects content and learned methods!

--- a/JavaScript/jsMethods.html
+++ b/JavaScript/jsMethods.html
@@ -7,29 +7,27 @@
 
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <script type="text/javascript" src="arraysAndObjects.js"></script>
+     <script type="text/javascript" src="jsMethods.js"></script>
 
-    <title>Arrays and Objetcs</title>
+    <title>New Project</title>
     <link rel="shortcut icon" type="image" href="">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="arraysAndObjects.css">
+    <link rel="stylesheet" type="text/css" href="jsMethonds.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
    </head>
    <body>
-<div class="container">
-  <h1>Arrays and Objects</h1>
-</div>
-<br>
-<div class="container content">
-  <p class="lead">Created an array of movie objects. Each movie should have a title, rating, and hasWatched properties. I iterated through the array and printed out something that looks like this:</p>
-
-<img src="img/array.png" alt="" class="img-fluid">
-
-</div>
-
+     <div class="container">
+    <h1>JS METHODS</h1>
+    <p>Topics:</p>
+    <ul>
+      <li>Adding methods to an objects</li>
+      <li>Namespacing</li>
+      <li>The Keyword <i>this</i></li>
+    </ul>
+    </div>
 
    <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
