learned DOM selecting

--- a/JavaScript/jsMethods.html
+++ b/JavaScript/jsMethods.html
@@ -9,7 +9,7 @@
 
      <script type="text/javascript" src="jsMethods.js"></script>
 
-    <title>New Project</title>
+    <title>JS Methods</title>
     <link rel="shortcut icon" type="image" href="">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
