--- a/JavaScript/DOM/circles.html
+++ b/JavaScript/DOM/circles.html
@@ -18,28 +18,17 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
    </head>
    <body>
-     <h1>My Header</h1>
-     <h1>GoodBye</h1>
-     <ul>
-       <li id="highlight"> List Item 1</li>
-       <li class="bolded">List Item 2</li>
-       <li class="bolded">List Item 3</li>
-     </ul>
-     <br>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, quibusdam! Nemo, harum voluptates rerum. Unde vel provident dolor alias ipsam minima excepturi inventore rem eius quis, tempore dignissimos possimus, veritatis!</p>
+     <div class="container circles">
+       <div class="row">
+         <div class="col-xlg-6 blue">
 
-     <a href="https://www.google.com"><h2>I am a link</h2></a>
+         </div>
+         <div class="col-xlg-6 red">
 
-     <!-- =================main content for events========= -->
-     <br>
-<div class="container">
-     <button type="button" name="Click Me" class="btn btn-primary">Click Me</button>
-     <p id="content">
-       Loser says what?
-     </p>
-     <br>
-     <a href="circles.html">go to circles</a>
-</div>
+         </div>
+
+       </div>
+     </div>
 
 
    <!-- jQuery first, then Tether, then Bootstrap JS. -->
