--- a/JavaScript/DOM/scoreKeeper.html
+++ b/JavaScript/DOM/scoreKeeper.html
@@ -8,21 +8,32 @@
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 
-    <title>Color Toggle</title>
+    <title>Score Keeper</title>
     <link rel="shortcut icon" type="image" href="">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="scoreKeeper.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
    </head>
    <body>
-    <button class="btn btn-primary"type="button" name="button">Click Me!</button>
+
+     <div class="container">
+       <h1><span class="p1">0</span> to <span class="p2">0</span></h1>
+
+       <p>Playing to: <span class="playScore">5</span></p>
+
+       <input type="number" name="Score" value="">
+
+       <button id="p1" type="button" name="player1">Player One</button>
+       <button id="p2" type="button" name="player2">Player Two</button>
+       <button id="reset" type="button" name="reset">Reset</button>
+     </div>
 
 
    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-     <script type="text/javascript" src="script.js"></script>
+     <script type="text/javascript" src="scoreKeeper.js"></script>
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
