finished color game

--- a/JavaScript/DOM/colorGame.html
+++ b/JavaScript/DOM/colorGame.html
@@ -18,10 +18,27 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
    </head>
    <body>
-     <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
-     <div id="stripe">
-       <button id="reset"type="button" name="button">New Colors</button>
-       <span id="message"></span>
+     <h1>THE GREAT
+        <br>
+       <span id="colorDisplay">RGB</span>
+       <br>
+        Color Game</h1>
+     <div id="strip" >
+       <div class="row">
+       <div class="col-sm-4">
+         <button id="reset"type="button" name="button">New Colors</button>
+      </div>
+       <div class="col-sm-4">
+         <span id="message"></span>
+       </div>
+       <div class="col-sm-4">
+         <button id="easy">Easy</button>
+         <button id="hard" class="selected">Hard</button>
+       </div>
+      </div>
+
+
+
      </div>
 
     <div class="container">
