first project with jQuery

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="script.js">
 
     </script>
-    
+
   </head>
   <body>
 
@@ -24,6 +24,8 @@
     <a href="jQueryMethods.html">Common Methods</a>
     <br>
     <a href="jQueryEffects.html">Effects</a>
+    <br>
+    <a href="jQueryTodo.html"> New Todo</a>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
